// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingBottom renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: 0;
  -moz-scroll-padding-bottom: 0;
  -ms-scroll-padding-bottom: 0;
  scroll-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 0;
  -moz-scroll-padding-bottom: 0;
  -ms-scroll-padding-bottom: 0;
  scroll-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 0;
  -moz-scroll-padding-bottom: 0;
  -ms-scroll-padding-bottom: 0;
  scroll-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 0;
  -moz-scroll-padding-bottom: 0;
  -ms-scroll-padding-bottom: 0;
  scroll-padding-bottom: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: hasnot;
  -moz-scroll-padding-bottom: hasnot;
  -ms-scroll-padding-bottom: hasnot;
  scroll-padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: has;
  -moz-scroll-padding-bottom: has;
  -ms-scroll-padding-bottom: has;
  scroll-padding-bottom: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: hasnot;
  -moz-scroll-padding-bottom: hasnot;
  -ms-scroll-padding-bottom: hasnot;
  scroll-padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: has;
  -moz-scroll-padding-bottom: has;
  -ms-scroll-padding-bottom: has;
  scroll-padding-bottom: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: invalid.path.1;
  -moz-scroll-padding-bottom: invalid.path.1;
  -ms-scroll-padding-bottom: invalid.path.1;
  scroll-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: invalid.path.1;
  -moz-scroll-padding-bottom: invalid.path.1;
  -ms-scroll-padding-bottom: invalid.path.1;
  scroll-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: invalid.path.1;
  -moz-scroll-padding-bottom: invalid.path.1;
  -ms-scroll-padding-bottom: invalid.path.1;
  scroll-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: invalid.path.1;
  -moz-scroll-padding-bottom: invalid.path.1;
  -ms-scroll-padding-bottom: invalid.path.1;
  scroll-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: -54881px;
  -moz-scroll-padding-bottom: -54881px;
  -ms-scroll-padding-bottom: -54881px;
  scroll-padding-bottom: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: -54881px;
  -moz-scroll-padding-bottom: -54881px;
  -ms-scroll-padding-bottom: -54881px;
  scroll-padding-bottom: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: -42365px;
  -moz-scroll-padding-bottom: -42365px;
  -ms-scroll-padding-bottom: -42365px;
  scroll-padding-bottom: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: -42365px;
  -moz-scroll-padding-bottom: -42365px;
  -ms-scroll-padding-bottom: -42365px;
  scroll-padding-bottom: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: July;
    -moz-scroll-padding-bottom: July;
    -ms-scroll-padding-bottom: July;
    scroll-padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: September;
    -moz-scroll-padding-bottom: September;
    -ms-scroll-padding-bottom: September;
    scroll-padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: July;
    -moz-scroll-padding-bottom: July;
    -ms-scroll-padding-bottom: July;
    scroll-padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: September;
    -moz-scroll-padding-bottom: September;
    -ms-scroll-padding-bottom: September;
    scroll-padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: May;
    -moz-scroll-padding-bottom: May;
    -ms-scroll-padding-bottom: May;
    scroll-padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: June;
    -moz-scroll-padding-bottom: June;
    -ms-scroll-padding-bottom: June;
    scroll-padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: April;
    -moz-scroll-padding-bottom: April;
    -ms-scroll-padding-bottom: April;
    scroll-padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: May;
    -moz-scroll-padding-bottom: May;
    -ms-scroll-padding-bottom: May;
    scroll-padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: June;
    -moz-scroll-padding-bottom: June;
    -ms-scroll-padding-bottom: June;
    scroll-padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-bottom: April;
    -moz-scroll-padding-bottom: April;
    -ms-scroll-padding-bottom: April;
    scroll-padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-bottom: July;
    -moz-scroll-padding-bottom: July;
    -ms-scroll-padding-bottom: July;
    scroll-padding-bottom: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-bottom: September;
    -moz-scroll-padding-bottom: September;
    -ms-scroll-padding-bottom: September;
    scroll-padding-bottom: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-bottom: July;
    -moz-scroll-padding-bottom: July;
    -ms-scroll-padding-bottom: July;
    scroll-padding-bottom: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-bottom: September;
    -moz-scroll-padding-bottom: September;
    -ms-scroll-padding-bottom: September;
    scroll-padding-bottom: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: November;
    -moz-scroll-padding-bottom: November;
    -ms-scroll-padding-bottom: November;
    scroll-padding-bottom: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-bottom: August;
    -moz-scroll-padding-bottom: August;
    -ms-scroll-padding-bottom: August;
    scroll-padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-bottom: January;
    -moz-scroll-padding-bottom: January;
    -ms-scroll-padding-bottom: January;
    scroll-padding-bottom: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: December;
    -moz-scroll-padding-bottom: December;
    -ms-scroll-padding-bottom: December;
    scroll-padding-bottom: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-bottom: April;
    -moz-scroll-padding-bottom: April;
    -ms-scroll-padding-bottom: April;
    scroll-padding-bottom: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: May;
    -moz-scroll-padding-bottom: May;
    -ms-scroll-padding-bottom: May;
    scroll-padding-bottom: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-bottom: June;
    -moz-scroll-padding-bottom: June;
    -ms-scroll-padding-bottom: June;
    scroll-padding-bottom: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-bottom: January;
    -moz-scroll-padding-bottom: January;
    -ms-scroll-padding-bottom: January;
    scroll-padding-bottom: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: December;
    -moz-scroll-padding-bottom: December;
    -ms-scroll-padding-bottom: December;
    scroll-padding-bottom: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-bottom: April;
    -moz-scroll-padding-bottom: April;
    -ms-scroll-padding-bottom: April;
    scroll-padding-bottom: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-bottom: May;
    -moz-scroll-padding-bottom: May;
    -ms-scroll-padding-bottom: May;
    scroll-padding-bottom: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-bottom: June;
    -moz-scroll-padding-bottom: June;
    -ms-scroll-padding-bottom: June;
    scroll-padding-bottom: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: 54881px;
  -moz-scroll-padding-bottom: 54881px;
  -ms-scroll-padding-bottom: 54881px;
  scroll-padding-bottom: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 54881px;
  -moz-scroll-padding-bottom: 54881px;
  -ms-scroll-padding-bottom: 54881px;
  scroll-padding-bottom: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 42365px;
  -moz-scroll-padding-bottom: 42365px;
  -ms-scroll-padding-bottom: 42365px;
  scroll-padding-bottom: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: 42365px;
  -moz-scroll-padding-bottom: 42365px;
  -ms-scroll-padding-bottom: 42365px;
  scroll-padding-bottom: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: July;
  -moz-scroll-padding-bottom: July;
  -ms-scroll-padding-bottom: July;
  scroll-padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: July;
  -moz-scroll-padding-bottom: July;
  -ms-scroll-padding-bottom: July;
  scroll-padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: June;
  -moz-scroll-padding-bottom: June;
  -ms-scroll-padding-bottom: June;
  scroll-padding-bottom: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: June;
  -moz-scroll-padding-bottom: June;
  -ms-scroll-padding-bottom: June;
  scroll-padding-bottom: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBottom renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-bottom: DarkSlateBlue;
  -moz-scroll-padding-bottom: DarkSlateBlue;
  -ms-scroll-padding-bottom: DarkSlateBlue;
  scroll-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: DarkSlateBlue;
  -moz-scroll-padding-bottom: DarkSlateBlue;
  -ms-scroll-padding-bottom: DarkSlateBlue;
  scroll-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: DarkSlateBlue;
  -moz-scroll-padding-bottom: DarkSlateBlue;
  -ms-scroll-padding-bottom: DarkSlateBlue;
  scroll-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-bottom: DarkSlateBlue;
  -moz-scroll-padding-bottom: DarkSlateBlue;
  -ms-scroll-padding-bottom: DarkSlateBlue;
  scroll-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
